--- a/.github/workflows/NanoPi-R2s RK3328 OpenWrt Build.yml
+++ b/.github/workflows/NanoPi-R2s RK3328 OpenWrt Build.yml
@@ -20,6 +20,10 @@ on:
   # release:
   #   types: [published]
     
+  watch:
+
+    types: [started]
+    
 #环境变量：SSH_ACTIONS设置为true则会在执行完Costom Configure File后显示一个SSH的链接，可用终端或者web登录到vps进行配置
 env:
   SSH_ACTIONS: false
